--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "This is a secret key."
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
